--- a/sites/public/styles/listings.scss
+++ b/sites/public/styles/listings.scss
@@ -143,9 +143,7 @@
     height: 70%;
   }
 }
-.coming-soon-title-only {
-  justify-content: flex-start !important;
-}
+
 .coming-soon-title-button {
   justify-content: space-between !important;
 }
